<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calendar_background">

    <!-- date toolbar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <!-- prev button -->
        <ImageView
            android:id="@+id/calendar_prev_button"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/calendar_previous_month"
            android:src="@drawable/ic_previous_arrow" />

        <!-- date title -->
        <TextView
            android:id="@+id/calendar_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/calendar_next_button"
            android:layout_toEndOf="@+id/calendar_prev_button"
            android:gravity="center"
            android:text="current date"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="?attr/colorOnSecondary"
            tools:ignore="HardcodedText" />

        <!-- next button -->
        <ImageView
            android:id="@+id/calendar_next_button"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/calendar_next_month"
            android:src="@drawable/ic_next_arrow" />
    </RelativeLayout>

    <!-- days header -->
    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/calendar_sunday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/calendar_monday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/calendar_tuesday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/calendar_wednesday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/calendar_thursday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/calendar_friday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/calendar_saturday" />

    </LinearLayout>

    <!-- days view -->
    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="12dp"
        android:numColumns="7" />
</LinearLayout>